# config-studio

./: .gitignore  AGENTS.md  package-lock.json  package.json  tauri-config-editor-prd.md  vite.config.ts
docs/superpowers/plans/: 2026-04-08-dark-mode-color-audit.md
src/: App.css  App.test.tsx  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/editors/: DeletableControl.test.tsx  DeletableControl.tsx  DiffViewer.tsx  FormEditor.tsx  RawEditor.test.tsx  RawEditor.tsx  StructureEditor.test.tsx  StructureEditor.tsx
src/components/file/: BackupsMenu.tsx  FileOpener.test.tsx  FileOpener.tsx  SaveControls.test.tsx  SaveControls.tsx
src/components/layout/: ModeTabs.test.tsx  ModeTabs.tsx  SaveFeedbackToast.test.tsx  SaveFeedbackToast.tsx  SettingsDrawer.test.tsx  SettingsDrawer.tsx  ShortcutOverlay.tsx  Sidebar.test.tsx  Sidebar.tsx  StatusBar.test.tsx  StatusBar.tsx  WelcomeScreen.tsx
src/lib/: backups.test.ts  backups.ts  fileActions.ts  fileSession.test.ts  fileSession.ts
src/lib/diff/: index.test.ts  index.ts
src/lib/motion/: viewTransition.test.ts  viewTransition.ts
src/lib/parse/: index.test.ts  index.ts
src/lib/preferences/: index.test.ts  index.ts
src/lib/state/: store.test.ts  store.ts
src/lib/theme/: useSystemTheme.test.ts  useSystemTheme.ts
src/lib/validation/: index.test.ts  index.ts  utils.test.ts  utils.ts
src/test/: setup.ts
src/types/: index.ts
