[package]
name = "config-studio"
version = "0.2.0"
description = "A macOS-native Tauri Config Studio for visually editing local configuration files"
authors = ["Sambit Biswas"]
edition = "2021"

[lib]
name = "config_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
